<resources>
    <string name="key_omnipod_common_bolus_beeps_enabled" translatable="false">AAPS.Omnipod.bolus_beeps_enabled</string>
    <string name="key_omnipod_common_basal_beeps_enabled" translatable="false">AAPS.Omnipod.basal_beeps_enabled</string>
    <string name="key_omnipod_common_smb_beeps_enabled" translatable="false">AAPS.Omnipod.smb_beeps_enabled</string>
    <string name="key_omnipod_common_tbr_beeps_enabled" translatable="false">AAPS.Omnipod.tbr_beeps_enabled</string>
    <string name="key_omnipod_common_suspend_delivery_button_enabled" translatable="false">AAPS.Omnipod.suspend_delivery_button_enabled</string>
    <string name="key_omnipod_common_time_change_event_enabled" translatable="false">AAPS.Omnipod.time_change_enabled</string>
    <string name="key_omnipod_common_expiration_reminder_enabled" translatable="false">AAPS.Omnipod.expiration_reminder_enabled</string>
    <string name="key_omnipod_common_expiration_reminder_hours_before_expiry" translatable="false">AAPS.Omnipod.expiration_reminder_hours_before_expiry</string>
    <string name="key_omnipod_common_expiration_alarm_enabled" translatable="false">AAPS.Omnipod.expiration_alarm_enabled</string>
    <string name="key_omnipod_common_expiration_alarm_hours_before_shutdown" translatable="false">AAPS.Omnipod.expiration_alarm_hours_before_shutdown</string>
    <string name="key_omnipod_common_low_reservoir_alert_enabled" translatable="false">AAPS.Omnipod.low_reservoir_alert_enabled</string>
    <string name="key_omnipod_common_low_reservoir_alert_units" translatable="false">AAPS.Omnipod.low_reservoir_alert_units</string>
    <string name="key_omnipod_common_automatically_silence_alerts_enabled" translatable="false">AAPS.Omnipod.automatically_acknowledge_alerts_enabled</string>
    <string name="key_common_preferences_category_alerts_settings" translatable="false">common_preferences_category_alerts</string>
    <string name="key_omnipod_common_preferences_category_notifications_settings"
        translatable="false">common_preferences_category_notifications_settings</string>
    <string name="key_omnipod_common_notification_uncertain_tbr_sound_enabled" translatable="false">AAPS.Omnipod.notification_uncertain_tbr_sound_enabled</string>
    <string name="key_omnipod_common_notification_uncertain_smb_sound_enabled" translatable="false">AAPS.Omnipod.notification_uncertain_smb_sound_enabled</string>
    <string name="key_omnipod_common_notification_uncertain_bolus_sound_enabled" translatable="false">AAPS.Omnipod.notification_uncertain_bolus_sound_enabled</string>
    <string name="omnipod_common_pod_management_title">Gerenciamento do Pod</string>
    <string name="omnipod_common_pod_management_heading_actions">Ações</string>
    <string name="omnipod_common_pod_management_heading_tools">Ferramentas</string>
    <string name="omnipod_common_pod_management_button_activate_pod">Pod ativo</string>
    <string name="omnipod_common_pod_management_button_deactivate_pod">Pod Desativado</string>
    <string name="omnipod_common_pod_management_button_discard_pod">Descartar Pod</string>
    <string name="omnipod_common_pod_management_discard_pod_confirmation">Se você descartar o Pod, você nunca mais será capaz de se comunicar com ele. Você só deve fazer isso quando todas as comunicações com o Pod persistirem em falhar. Se você ainda consegue se comunicar com o Pod, por favor, use a opção <b>Desativar Pod</b>.\n\nSe quiser continuar, certifique-se de remover o Pod do seu corpo!</string>
    <string name="omnipod_common_pod_management_button_play_test_beep">Faça os testes sonoros</string>
    <string name="omnipod_common_pod_management_button_playing_test_beep">Fazendo testes sonoros…</string>
    <string name="omnipod_common_pod_management_button_pod_history">Histórico do Pod</string>
    <string name="omnipod_common_error_pod_not_attached">Sem Pod ativo</string>
    <string name="omnipod_common_error_set_basal_failed">Falha ao configurar perfil basal.</string>
    <string name="omnipod_common_error_bolus_did_not_succeed">Bolus não foi administrado.</string>
    <string name="omnipod_common_error_failed_to_set_profile_empty_profile">Falha ao definir o perfil basal: recebeu um perfil vazio. Certifique-se de ativar o seu perfil basal.</string>
    <string name="omnipod_common_error_set_initial_basal_schedule_no_profile">Nenhum perfil basal está ativo. Certifique-se de ativar seu perfil basal.</string>
    <string name="omnipod_common_error_unsupported_custom_command">Comando personalizado não suportado: %1$s</string>
    <string name="omnipod_common_error_failed_to_refresh_status">Falha ao atualizar o status</string>
    <string name="omnipod_common_error_failed_to_refresh_status_on_startup">Falha na atualização do status ao iniciar</string>
    <string name="omnipod_common_error_failed_to_silence_alerts">Falha ao silenciar os alertas</string>
    <string name="omnipod_common_error_failed_to_suspend_delivery">Falha ao suspender a administração</string>
    <string name="omnipod_common_error_failed_to_set_time">Falha ao definir o tempo</string>
    <string name="omnipod_common_error_failed_to_resume_delivery">Falha ao reiniciar a administração</string>
    <string name="omnipod_common_error_failed_to_initialize_pod">Falha ao iniciar o Pod</string>
    <string name="omnipod_common_error_failed_to_insert_cannula">Falha ao inserir a cânula</string>
    <string name="omnipod_common_error_pod_fault_activation_time_exceeded">O tempo de ativação do Pod foi ultrapassado. Este Pod não pode mais ser ativado.</string>
    <string name="omnipod_common_error_failed_to_verify_activation_progress">Falha ao verificar o progresso da ativação. Por favor, reinicie novamente.</string>
    <string name="omnipod_common_error_pod_suspended">Pod suspenso</string>
    <string name="omnipod_common_error_failed_to_play_test_beep">Falha ao realizar teste sonoro</string>
    <string name="omnipod_common_error_time_out_of_sync">O tempo no Pod está dessincronizado. Por favor, atualize o tempo na aba Omnipod.</string>
    <string name="omnipod_common_error_unexpected_exception">Um erro inesperado aconteceu. Por favor, relate! (%1$s: %2$s).</string>
    <string name="omnipod_common_confirmation">Confirmação</string>
    <string name="omnipod_common_confirmation_time_or_timezone_change">O tempo e/ou o fuso horário mudaram no Pod.</string>
    <string name="omnipod_common_confirmation_expiration_alerts_updated">A configuração de alerta foi atualizada no Pod.</string>
    <string name="omnipod_common_confirmation_time_on_pod_updated">O tempo no Pod foi atualizado.</string>
    <string name="omnipod_common_confirmation_suspended_delivery">Toda a entrega de insulina foi suspensa.</string>
    <string name="omnipod_common_confirmation_silenced_alerts">Alertas ativos foram silenciados.</string>
    <string name="omnipod_common_confirmation_delivery_resumed">Toda a entrega de insulina foi reiniciada.</string>
    <string name="omnipod_common_overview_button_set_time">Configurar a hora</string>
    <string name="omnipod_common_overview_button_suspend_delivery">Suspender</string>
    <string name="omnipod_common_overview_button_resume_delivery">Reiniciar a administração</string>
    <string name="omnipod_common_overview_button_pod_management">Gerenciamento do Pod</string>
    <string name="omnipod_common_overview_button_silence_alerts">Alertas silenciados</string>
    <string name="omnipod_common_overview_pod_status">Status do Pod</string>
    <string name="omnipod_common_overview_total_delivered">Total entregue</string>
    <string name="omnipod_common_overview_total_delivered_value">%1$.2f U</string>
    <string name="omnipod_common_overview_pod_unique_id">ID único</string>
    <string name="omnipod_common_overview_lot_number">Número do LOT</string>
    <string name="omnipod_common_overview_pod_sequence_number">Número sequencial</string>
    <string name="omnipod_common_overview_pod_expiry_date">Pod expira</string>
    <string name="omnipod_common_overview_last_connection">Última conexão</string>
    <string name="omnipod_common_overview_last_bolus">Último bolus</string>
    <string name="omnipod_common_overview_temp_basal_rate">Taxa Basal Temporária</string>
    <string name="omnipod_common_overview_base_basal_rate">Taxa Basal de base</string>
    <string name="omnipod_common_overview_reservoir">Reservatório</string>
    <string name="omnipod_common_overview_pod_active_alerts">Alertas ativos do Pod</string>
    <string name="omnipod_common_overview_firmware_version">Versão do firmware</string>
    <string name="omnipod_common_overview_time_on_pod">Tempo no Pod</string>
    <string name="omnipod_common_overview_temp_basal_value">%1$.2fU/h @%2$s (%3$d/%4$d minutos)</string>
    <string name="omnipod_common_overview_reservoir_value">%1$.2f U restantes</string>
    <string name="omnipod_common_overview_reservoir_value_over50">Mais de 50 U restantes</string>
    <string name="omnipod_common_overview_errors">Erros</string>
    <string name="omnipod_common_overview_last_bolus_value" translatable="false">%1$.2f %2$s (%3$s)</string>
    <string name="omnipod_common_wizard_button_cancel">Cancelar</string>
    <string name="omnipod_common_wizard_button_finish">Fim</string>
    <string name="omnipod_common_wizard_button_next">Seguinte</string>
    <string name="omnipod_common_wizard_button_retry">Tente novamente</string>
    <string name="omnipod_common_wizard_button_deactivate_pod">Pod Desativado</string>
    <string name="omnipod_common_wizard_button_discard_pod">Descartar Pod</string>
    <string name="omnipod_common_wizard_exit_confirmation_text">Você ainda não concluiu todas as etapas. Tem certeza que deseja sair?</string>
    <string name="omnipod_common_wizard_exit_confirmation_title">Sair</string>
    <string name="omnipod_common_preferences_bolus_beeps_enabled">Sinais sonoros de bolus ativados</string>
    <string name="omnipod_common_preferences_basal_beeps_enabled">Bips basais ativados</string>
    <string name="omnipod_common_preferences_smb_beeps_enabled">Bips SMB ativados</string>
    <string name="omnipod_common_preferences_tbr_beeps_enabled">Bips TBR ativados</string>
    <string name="omnipod_common_preferences_expiration_reminder_enabled">Lembrete de expiração ativado</string>
    <string name="omnipod_common_preferences_expiration_reminder_enabled_summary">Quando ativado, o pod emitirá um bipe quando o tempo especificado for atingido</string>
    <string name="omnipod_common_preferences_expiration_reminder_hours_before_expiry">Lembrete horas antes do vencimento (72 horas)</string>
    <string name="omnipod_common_preferences_expiration_alarm_enabled">Alerta de expiração ativado</string>
    <string name="omnipod_common_preferences_expiration_alarm_enabled_summary">Quando ativado, o pod emitirá um bipe quando o horário especificado for atingido e 1 hora antes do desligamento</string>
    <string name="omnipod_common_preferences_expiration_alarm_hours_before_shutdown">Alerta horas antes do desligamento (80 horas)</string>
    <string name="omnipod_common_preferences_low_reservoir_alert_enabled">Alerta de reservatório baixo ativado</string>
    <string name="omnipod_common_preferences_low_reservoir_alert_units">Número de unidades</string>
    <string name="omnipod_common_preferences_category_alerts">Alertas</string>
    <string name="omnipod_common_preferences_category_confirmation_beeps">Sinais de confirmação</string>
    <string name="omnipod_common_preferences_category_notifications">Notificações</string>
    <string name="omnipod_common_preferences_notification_uncertain_tbr_sound_enabled">Som para notificações TBR incertas ativado</string>
    <string name="omnipod_common_preferences_notification_uncertain_smb_sound_enabled">Som para
        notificações SMB incertas ativadas</string>
    <string name="omnipod_common_preferences_notification_uncertain_bolus_sound_enabled">Som para notificações de bolus incerto ativado</string>
</resources>